[package]
name = "container-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lxd = { version = "0.1.8" }
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"
